@@ -1,0 +1,133 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<test-data>
+    <test-code>
+        <description><![CDATA[
+		JUnit 3 Test contains no assert  
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+		public class MyTestCase extends TestCase {
+			//negative on rule
+			public void testMyCaseWithNoAssert() {
+				boolean myVar = false;		
+				//no assert here
+			}
+		}
+     ]]></code>
+    </test-code>
+   <test-code>
+        <description><![CDATA[
+		JUnit 4 Test contains no assert
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+		public class MyTestCase extends TestCase {
+			//negative on rule
+			@Test
+			public void myCaseWithNoAssert() {
+				boolean myVar = false;		
+				//no assert here
+			}
+		}
+     ]]></code>
+    </test-code>
+   <test-code>
+        <description><![CDATA[
+		JUnit 3 Test contains one assert		
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+		public class MyTestCase extends TestCase {
+			//negative on rule
+			public void testMyCaseWithOneAssert() {
+				boolean myVar = false;		
+				assertFalse("should be false",myVar);
+			}
+		}
+     ]]></code>
+    </test-code>
+   <test-code>
+        <description><![CDATA[
+		JUnit 4 Test contains one assert
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+		public class MyTestCase extends TestCase {
+			//negative on rule
+			@Test
+			public void myCaseWithOneAssert() {
+				boolean myVar = false;		
+				assertFalse("should be false",myVar);
+			}
+		}
+     ]]></code>
+    </test-code>
+   <test-code>
+        <description><![CDATA[
+		JUnit 3 Test contains more than one assert
+     ]]></description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+		public class MyTestCase extends TestCase {
+			//positive on rule
+			public void testMyCaseWithMoreAsserts() {
+				boolean myVar = false;		
+				assertFalse("myVar should be false",myVar);
+				assertEquals("should equals false", false, myVar);
+			}
+		}
+     ]]></code>
+    </test-code>
+   <test-code>
+        <description><![CDATA[
+		JUnit 4 Test contains more than one assert
+     ]]></description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+			public class MyTestCase extends TestCase {
+				//positive on rule
+				@Test
+				public void myCaseWithMoreAsserts() {
+					boolean myVar = false;		
+					assertFalse("myVar should be false",myVar);
+					assertEquals("should equals false", false, myVar);
+				}
+			}
+     ]]></code>
+    </test-code>
+   <test-code>
+        <description><![CDATA[
+		JUnit 3 Test contains more than one assert, but allowed
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <rule-property name="maximumAsserts">2</rule-property>
+        <code><![CDATA[
+		public class MyTestCase extends TestCase {
+			//positive on rule
+			public void testMyCaseWithMoreAsserts() {
+				boolean myVar = false;		
+				assertFalse("myVar should be false",myVar);
+				assertEquals("should equals false", false, myVar);
+			}
+		}
+     ]]></code>
+    </test-code>
+   <test-code>
+        <description><![CDATA[
+		JUnit 4 Test contains more than one assert, but allowed
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <rule-property name="maximumAsserts">2</rule-property>
+        <code><![CDATA[
+			public class MyTestCase extends TestCase {
+				//positive on rule
+				@Test
+				public void myCaseWithMoreAsserts() {
+					boolean myVar = false;		
+					assertFalse("myVar should be false",myVar);
+					assertEquals("should equals false", false, myVar);
+				}
+			}
+     ]]></code>
+    </test-code>
+</test-data>
